# rip2

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.org  flake.nix  release-please-config.json
.github/workflows/: ci.yml  release.yml  test.yml
src/: args.rs  completions.rs  lib.rs  main.rs  record.rs  util.rs
tests/: integration_tests.rs  shell_completions.exp  unit_tests.rs
