[package]
edition = '2021'
name = "rm-improved-2"
version = "0.1.0"
authors = ["mail@nivekuil.com", "mahid@standingpad.org", "miles.cranmer@gmail.com"]
description = "rip: a safe and ergonomic alternative to rm"
repository = "https://github.com/MilesCranmer/rip"
readme = "README.md"
license = "GPL-3.0+"
include = [
    "src/*.rs",
    "Cargo.toml",
]
categories = ["command-line-utilities"]
autobins = false

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
walkdir = "1"
time = "0.1"
error-chain = "0.12"

[dev-dependencies]
rand = "0.8"

[profile.release]
opt-level = "s"

[[bin]]
name = "rip"
path = "src/main.rs"
