[package]
edition = '2021'
name = "rip2"
version = "0.5.2"
authors = ["mail@nivekuil.com", "mahid@standingpad.org", "miles.cranmer@gmail.com"]
description = "rip: a safe and ergonomic alternative to rm"
repository = "https://github.com/MilesCranmer/rip"
readme = "README.md"
license = "GPL-3.0+"
include = [
    "src/*.rs",
    "Cargo.toml",
]
keywords = ["cli", "rm", "delete", "trash", "recycle"]
categories = ["command-line-utilities"]
autobins = false

[dependencies]
anstyle = "1.0.6"
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
clap_complete_nushell = "4.4"
dunce = "1.0.4"
walkdir = "1"
chrono = "0.4.33"

[dev-dependencies]
assert_cmd = "1.0"
lazy_static = "1.4"
predicates = "3.0"
rand = "0.8"
rstest = "0.18"
tempfile = "3"

[profile.release]
opt-level = 3

[[test]]
name = "unit_tests"
path = "tests/unit_tests.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[bin]]
name = "rip"
path = "src/main.rs"
